# reading-tracker

./: CMakeLists.txt  README.md  addedition.cpp  addedition.h  addedition.ui  bookmanager.cpp  bookmanager.h  databasemanager.cpp  databasemanager.h  editionmanager.cpp  editionmanager.h  idnametablemanager.cpp  idnametablemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylibrarymanager.cpp  mylibrarymanager.h  ritemmanager.cpp  ritemmanager.h
